--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       
       - name: Initialize clasp credentials
         id: clasp-credentials
-        run: echo "$clasp-credentials" >> ~/.clasprc.json
+        run: | 
+          echo "$clasp-credentials" >> ~/.clasprc.json
+          echo "$(~/.clasprc.json)"
         
       - name: Save current .clasprc.json contents to CLASPRC_JSON_FILE environment variable
         id: save-clasprc
