--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
       - name: Initialize clasp credentials
         id: clasp-credentials
         run: | 
-          echo "$clasp-credentials" >> ~/.clasprc.json
-          echo "$(~/.clasprc.json)"
+          sudo echo "$clasp-credentials" >> ~/.clasprc.json
+          sudo echo "$(~/.clasprc.json)"
         
       - name: Save current .clasprc.json contents to CLASPRC_JSON_FILE environment variable
         id: save-clasprc
         run: |
-          echo ::add-mask::$(tr -d '\n\r' < ~/.clasprc.json)
-          echo "CLASPRC_JSON_FILE=$(tr -d '\n\r' < ~/.clasprc.json)" >> $GITHUB_ENV        
+          sudo echo ::add-mask::$(tr -d '\n\r' < ~/.clasprc.json)
+          sudo echo "CLASPRC_JSON_FILE=$(tr -d '\n\r' < ~/.clasprc.json)" >> $GITHUB_ENV        
       
       - name: Save CLASPRC_JSON_FILE environment variable to CLASPRC_JSON repo secret
         id: set-clasprc-secret
